--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Blockchain</title>
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body class="body">
-    <!-- Wrapper -->
+    <section>
+        <svg id="curve" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ffffff" fill-opacity="1" d="M0,224L48,202.7C96,181,192,139,288,154.7C384,171,480,245,576,261.3C672,277,768,235,864,202.7C960,171,1056,149,1152,154.7C1248,160,1344,192,1392,208L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+        </svg>
+        <!-- Wrapper -->
         <div id="wrapper">
             <!-- Header -->
                 <header id="header">
-                    <div class="logo">
-                        <span class="icon fa-gem"></span>
-                    </div>
                     <div class="content">
                         <div class="inner">
                             <h1>Blockchain Programming</h1>
@@ -26,19 +28,71 @@
                         <ul>
                             <li><a href="#intro">Intro</a></li>
                             <li><a href="#work">Work</a></li>
-                            <li><a href="#about">About</a></li>
+                            <li><a href="#about">About</a></li>                        
                             <li><a href="#contact">Contact</a></li>
-                            <!--<li><a href="#elements">Elements</a></li>-->
                         </ul>
                     </nav>
+                    
                 </header>
 
 
                 <!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; V&V. Design</a>.</p>
-					</footer>
+                    </foot>
+    </section>    
+    <section id="intro" class="intro-section">
+        <div class="container">
+            <div class="intro-description">
+                <div class="intro-description padding-right animate-left">
+                    <div class="content">
+                        <div class="inner">
+                            <h2>About blockchain</h2>
+                            <p2> 
+                                If you have been following banking, investing, or cryptocurrency over the last ten years, 
+                                you may be familiar with “blockchain,” the record-keeping technology behind the Bitcoin 
+                                network. And there’s a good chance that it only makes so much sense. In trying to learn 
+                                more about blockchain, you've probably encountered a definition like this: “blockchain 
+                                is a distributed, decentralized, public ledger."</p2>
+                        </div>
+                    </div>
+                </div>
+                <div class="image-group">
+                    <img class="animate-top" src="https://image.freepik.com/free-photo/bitcoins-virtual-money_136404-262.jpg" alt="">
+                    <img class="animate-bottom" src="https://image.freepik.com/free-photo/bitcoins-virtual-money_136404-264.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
-
+    <footer class="footer2">
+        <div id="about" class="container">
+            <div class="back-to-top">
+                <a href="#wrapper"><i class="fas fa-chevron-up"></i></a>
+            </div>
+            <div class="footer-content">
+                <div class="footer-content-about">
+                    <h1>About us</h1>
+                    <p> 
+                        What's our story? We are two financial engineering students at ESILV.
+                        Our names are Victor Larrezet & Valentine Biais and we designed
+                        this website for our Web Development course.</p>
+                </div>
+                <div class="footer-content-divider">
+                    <div class="newsletter-container">
+                        <h1>Newsletter</h1>
+                        <form action="" class="newsletter-form">
+                            <input type="text" class="newsletter-input" placeholder="Your email address...">
+                            <button class="newsletter-btn" type="submit">
+                                <i class="fas fa-envelope"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="main.js"></script>
 </body>
 </html>
