--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body class="body">
-    <section>
+    <section class="first">
         <svg id="curve" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1" d="M0,224L48,202.7C96,181,192,139,288,154.7C384,171,480,245,576,261.3C672,277,768,235,864,202.7C960,171,1056,149,1152,154.7C1248,160,1344,192,1392,208L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
@@ -81,11 +81,11 @@
                 <div class="footer-content-divider">
                     <div class="newsletter-container">
                         <h1>Newsletter</h1>
-                        <form action="" class="newsletter-form">
-                            <input type="text" class="newsletter-input" placeholder="Your email address...">
-                            <button class="newsletter-btn" type="submit">
-                                <i class="fas fa-envelope"></i>
-                            </button>
+                        <form action="" id="foo" class="newsletter-form">
+                            <input type="email" id="email" class="newsletter-input" placeholder="Your email address..." 
+                            required minlength="6" maxlength="35">
+                            <button class="newsletter-btn" id="btn_submit" type="submit">
+                            <i class="fas fa-envelope"></i>
                         </form>
                     </div>
                 </div>
@@ -93,6 +93,7 @@
         </div>
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
